--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ VITE_GOOGLE_LOGIN_CLIENT_ID=429947493996-mp9c40q74oho7u07j3v5hv5aeom7pbdk.apps.g
 VITE_USER_INFO_GOOGLE_API=https://www.googleapis.com/oauth2/v3/userinfo
 
 VITE_API_BASE_URL=https://80t82fiur2.execute-api.ap-south-1.amazonaws.com
-VITE_AWS_MULTIPART_URL=https://13.202.187.86/upload
+VITE_AWS_MULTIPART_URL=https://upload.rhoselect.com/upload
